Update lucene to 9.11.1 (#4)